try to work with import/export

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>JS data types</title>
   </head>
   <body>
-    <h1>Для перегляду результатів роботи JS використовуйте console</h1>
+    <div class="addition">
+      <label for="first-number">Input fractional number</label>
+      <input id="first-number" type="text" placeholder="0.1" />
+      <label for="second-number">Input another fractional number</label>
+      <input id="second-number" type="text" placeholder="0.2" />
+      <p id="result">The result of the addition is: ...</p>
+    </div>
+    <div class="container"></div>
+    <div class="container"></div>
+    <div class="container"></div>
+    <div class="container"></div>
   </body>
 </html>
