fix income-calc title mistake

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="income-calculator">
-      <h2>Input enter the deposit amount and term in months</h2>
+      <h2>Input the deposit amount and term in months</h2>
       <p>
         Deposit Amount
         <input
