and the most final fix

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         Flash drive capacity
 
         <select class="flashdrive-capacity">
-          <option value="">--Please choose an option--</option>
+          <option value="" selected="selected">
+            --Please choose an option--
+          </option>
           <option value="4">4 GB</option>
           <option value="16">16 GB</option>
           <option value="64">64 GB</option>
